--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <div class="main show-nav">
+    <div class="main">
         <div class="circulo-main">
             <div class="circulo">
                 <button id="close">
@@ -36,8 +36,8 @@
     <nav>
         <ul>
             <li><i class="fas fa-home"></i>Home</li>
-            <li><i class="fas fa-user-alt">Sobre</i></li>
-            <li><i class="fas fa-envelope">Contato</i></li>
+            <li><i class="fas fa-user-alt"></i>Sobre</li>
+            <li><i class="fas fa-envelope"></i>Contato</li>
         </ul>
     </nav>
     
